--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
-include AUTHORS.txt GPL-3.txt INSTALL.txt recovermypartition.pro CHANGELOG.txt *.py
-recursive-include i18n *.ts *.qm
-recursive-include doc *.1
+include GPL-3.txt *.py
+recursive-include locale *.po
+recursive-include locale *.1
 prune __pycache__
 global-exclude *.pyc
