Added mo in MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include GPL-3.txt *.py
-recursive-include locale *.po
+recursive-include locale *.po *.mo
 recursive-include locale *.1
 prune __pycache__
 global-exclude *.pyc
