--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include GPL-3.txt *.py
 recursive-include locale *.po *.mo
 recursive-include locale *.1
+recursive-include doc/ttyrec *.gif
 prune __pycache__
 global-exclude *.pyc
