--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include GPL-3.txt *.py
+include GPL-3.txt CHANGELOG.txt *.py
 recursive-include locale *.po *.mo
 recursive-include locale *.1
 recursive-include doc/ttyrec *.gif
