Translation catalog is now inside the package

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include GPL-3.txt CHANGELOG.txt *.py
-recursive-include locale *.po *.mo
+recursive-include locale *.po 
+recursive-include toomanyfiles *.mo
 recursive-include locale *.1
 recursive-include doc/ttyrec *.gif
 prune __pycache__
