--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ colorama = "^0.4.6"
 poethepoet = "^0.24.2"
 pytest = "^7.4.3"
 mangenerator = "^0.4.0"
+coverage = "^7.3.2"
 
 [build-system]
 requires = ["poetry-core"]
