--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ authors = [
 ]
 license = {text = "GPL-3"}
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4"
 dependencies = [
-    "colorama (>=0.4.6,<0.5.0)"
+    "colorama (>=0.4.6,<0.5.0)",
+    "pydicts (>=0.17.0,<0.18.0)"
 ]
 
 [tool.poetry]
